Fix labels when datalist is open
I make the main panel background blue when a datalist is open, but the labels have a white background.  I did that when the labels overlapped the border of the input field.  That's no longer necessary.  Making the label background transparent fixes the problem.

--- a/src/ssp.css
+++ b/src/ssp.css
@@ -195,12 +195,12 @@ p {
   height: 16px;
   overflow: clip;
 }
-.sr-only {
+.label {
   border: 2px;
   position: absolute;
   left: 0px;
   top: 3px;
-  background-color: white;
+  background-color: transparent;
   overflow: hidden !important;
   color: rgb(36, 104, 155, 100%);
   padding-left: 5px;
